tests/ui/enum-discriminant/issue-41394.stderr
error[E0369]: cannot add `{integer}` to `&str`
  --> $DIR/issue-41394.rs:2:12
   |
LL |     A = "" + 1
   |         -- ^ - {integer}
   |         |
   |         &str

note: erroneous constant encountered
  --> $DIR/issue-41394.rs:7:9
   |
LL |     A = Foo::A as isize
   |         ^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0369`.
